--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "date-fns": "^4.1.0"
+        "date-fns": "^4.1.0",
+        "react-beautiful-dnd": "^13.1.1"
     }
 }
